Fix flexboxes on Firefox

--- a/SupClient/src/styles/reset.styl
+++ b/SupClient/src/styles/reset.styl
@@ -2,6 +2,8 @@
 
 *
   box-sizing border-box
+  min-width 0
+  min-height 0
 
 html, body
   height 100%
